[GC] Fixed remaining bugs regarding job execution (#128)
* [GC] Fixed remaining bugs regarding job execution

* [GC] Fixed socket server logger

* [GC] Added updating current job status

* [GC] Fixed tests